Changed a lot of names in the project

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="lib/gson-2.2.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/RFYesterday/lib/gson-2.2.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
