--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.rf12.stats"
+    package="dk.rf.yesterday"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".RF12StatsActivity"
+            android:name=".RFYesterdayQuestionaryActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
@@ -19,17 +19,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="dk.rf.yesterday.RFYesterdayMapActivity"
+            android:name=".RFYesterdayMapActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
-            <intent-filter>
-
-                <!--
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                -->
-            </intent-filter>
         </activity>
     </application>
 
