Added some images ..

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RFYesterday</name>
+	<name>Yesterday at Roskilde Festival</name>
 	<comment></comment>
 	<projects>
 	</projects>
